--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:mysql://ch4njun-database-2.ckjufvaxbvyp.ap-northeast-2.rds.amazonaws.com/cspm
+    url: jdbc:mysql://ch4njun-cspm.ckjufvaxbvyp.ap-northeast-2.rds.amazonaws.com/cspm
     username: ch4njun
     password: cks14579!
     driver-class-name: com.mysql.jdbc.Driver
