--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,9 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:mysql://ch4njun-cspm.ckjufvaxbvyp.ap-northeast-2.rds.amazonaws.com/cspm
-    username: ch4njun
-    password: cks14579!
+    url: jdbc:mysql://127.0.0.1/cspm
+    username: root
+    password: 1544
     driver-class-name: com.mysql.jdbc.Driver
 
   jpa:
