--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1/cspm
+    url: jdbc:mysql://127.0.0.1/cspm?createDatabaseIfNotExist = true
     username: root
     password: 1544
     driver-class-name: com.mysql.jdbc.Driver
@@ -15,3 +15,5 @@ spring:
     show-sql: true
     generate-ddl: true
     database: mysql
+    hibernate:
+      ddl-auto: update
