--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1/cspm?createDatabaseIfNotExist=true
+    url: jdbc:mysql://terraform-20210615050925589900000001.ckjufvaxbvyp.ap-northeast-2.rds.amazonaws.com/cspm?createDatabaseIfNotExist=true
     username: ch4njun
     password: cks14579!
     driver-class-name: com.mysql.jdbc.Driver
