--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,9 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:mysql://terraform-20210615050925589900000001.ckjufvaxbvyp.ap-northeast-2.rds.amazonaws.com/cspm?createDatabaseIfNotExist=true
-    username: ch4njun
-    password: cks14579!
+    url: jdbc:mysql://[IP]/cspm?createDatabaseIfNotExist=true
+    username: [ID]
+    password: [PW]
     driver-class-name: com.mysql.jdbc.Driver
 
   jpa:
